添加Web Workers 默认程序

--- a/days/day4/using-web-workers-to-speed-up-javascript-applications/index.html
+++ b/days/day4/using-web-workers-to-speed-up-javascript-applications/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
+    <!-- <script src="./default.js"></script> -->
     <title>使用 Web Workers 来加速 JavaScript 应用</title>
   </head>
   <!-- https://github.com/xitu/gold-miner/blob/master/article/2021/using-web-workers-to-speed-up-javascript-applications.md -->
